# cookiecutter-drf-vuetify

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env.example  .nginx.example.conf  README.md  docker-compose.yml  linting.sh  setup-dev.sh
{{cookiecutter.project_name}}/.github/workflows/: docker.yml
{{cookiecutter.project_name}}/backend/: pyproject.toml
{{cookiecutter.project_name}}/backend/src/backend/api/: settings.py  urls.py
{{cookiecutter.project_name}}/backend/src/backend/mymodel/: admin.py  apps.py  models.py  serialisers.py  views.py
{{cookiecutter.project_name}}/backend/src/backend/mymodel/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/backend/src/backend/tokenauth/: apps.py
{{cookiecutter.project_name}}/docker/backend/: Dockerfile
{{cookiecutter.project_name}}/docker/frontend/: Dockerfile
{{cookiecutter.project_name}}/frontend/: index.html  package-lock.json  package.json  vite.config.mts
{{cookiecutter.project_name}}/frontend/src/: components.d.ts
{{cookiecutter.project_name}}/frontend/src/backend/: get_django_data.ts
{{cookiecutter.project_name}}/frontend/src/components/: HelloWorld.vue  LoginForm.vue  ThemeSwitch.vue
{{cookiecutter.project_name}}/frontend/src/layouts/: default.vue
{{cookiecutter.project_name}}/frontend/src/pages/: login.vue
{{cookiecutter.project_name}}/frontend/src/plugins/: vuetify.ts
{{cookiecutter.project_name}}/frontend/src/stores/: auth.ts
{{cookiecutter.project_name}}/linters/: .pre-commit-config.yml
(+3 files in other folders)
